# vero-the-house-bot

./: .gitignore  README.md  deploy.sh  hardware_diagnostic.py  main.py  simple_hardware_test.py
src/drive_mechanics/: README.md  package.xml  setup.cfg  setup.py
src/drive_mechanics/config/: motor_config.yaml  motor_config_new.yaml  motor_config_old.yaml
src/drive_mechanics/docs/: NETWORK_SETUP.md
src/drive_mechanics/drive_mechanics/: angular_test.py  drive_node.py  motor_controller.py
src/drive_mechanics/drive_mechanics/launch/: drive_mechanics.launch.py
src/drive_mechanics/launch/: drive_mechanics.launch.py  drive_mechanics_minimal.launch.py  pc.launch.py  pi_zero.launch.py  teleop_only.launch.py
src/vero_core/: package.xml  setup.cfg  setup.py
src/vero_core/vero_core/: motor_driver.py  movement_node.py
src/vero_hardware/: CMakeLists.txt  package.xml  vero_hardware_plugin.xml
src/vero_hardware/config/: diff_drive_controller.yaml
src/vero_hardware/include/vero_hardware/: motor_driver.hpp  motor_interface.hpp  vero_hardware_interface.hpp
src/vero_hardware/launch/: vero_control.launch.py
src/vero_hardware/src/: motor_driver.cpp  motor_interface.cpp  vero_hardware_interface.cpp
src/vero_hardware/urdf/: vero.urdf.xacro
